Changes after consultation 01 and initial commit for HW01

--- a/ex01/fact/makefile
+++ b/ex01/fact/makefile
@@ -1,10 +1,21 @@
+# SOURCES = fact.c lib.c
+# OBJECTS = $(SOURCES:.c=.o)
+
+# promenne se expanduji az tehdy, co se pouziji
 all: fact
 
-fact: fact.o lib.o
+#fact: fact.o lib.o
+fact: lib.o
 
+# c soubory si domysli
 %.o: %.h
 
+#fact.o: fact.c lib.h
+
 clean: 
-	rm -f fact *.o
+	$(RM) fact *.o
 
 .PHONY: all clean
+
+# %: %.o
+# $(CC) $(LDFLAGS) -o $@ $^ $(LDLIBS) $(LOADLIBES)
