Finished most of the work on HW02, time to implement bonuses

--- a/hw02/makefile
+++ b/hw02/makefile
@@ -4,9 +4,7 @@ all: lib bin
 
 ##########################
 
-libbinary.o: strategy.h
-liblinear.o: strategy.h
-liboracle.o: strategy.h
+libbinary.o liblinear.o liboracle.o: strategy.h
 
 ##########################
 
@@ -14,14 +12,7 @@ lib: CFLAGS += -fPIC
 lib: LDFLAGS += -Wl,-rpath,.
 lib: libbinary.so liblinear.so liboracle.so
 
-# maybe replace with only 1 line
-libbinary.so: libbinary.o
-	$(CC) $(LDFLAGS) -shared -o $@ $^ $(LDLIBS) $(LOADLIBES)
-
-liblinear.so: liblinear.o
-	$(CC) $(LDFLAGS) -shared -o $@ $^ $(LDLIBS) $(LOADLIBES)
-
-liboracle.so: liboracle.o
+%.so: %.o
 	$(CC) $(LDFLAGS) -shared -o $@ $^ $(LDLIBS) $(LOADLIBES)
 
 ##########################
@@ -30,11 +21,16 @@ bin: LDFLAGS =-Wl,-rpath,.
 bin: LDLIBS = -ldl
 bin: guess
 
-guess.o: strategy.h
+guess.o utils.o: utils.h
+
+guess: utils.o
 
 ##########################
 
 clean: 
+	$(RM) *.o *.a
+
+distclean:
 	$(RM) guess *.o *.a *.so
 
 .PHONY: all clean lib bin
