Wtf, why doesn't this work

--- a/hw03/makefile
+++ b/hw03/makefile
@@ -4,8 +4,8 @@ all: lib bin
 
 ##########################
 
-libmemgrind.o: libmemgrind.h utils.h
-utils.o: utils.h
+libmemgrind.o: libmemgrind.h #utils.h
+#utils.o: utils.h
 
 ##########################
 
@@ -13,15 +13,19 @@ lib: CFLAGS += -fPIC
 lib: LDFLAGS += -Wl,-rpath,.
 lib: libmemgrind.so
 
-libmemgrind.so: libmemgrind.o utils.o
+libmemgrind.so: libmemgrind.o #utils.o
 	$(CC) $(LDFLAGS) -shared -o $@ $^ $(LDLIBS) $(LOADLIBES)
+
+##########################
+
+bin: test_easy
 
 ##########################
 
 clean: 
 	$(RM) *.o *.a
 
-distclean:
-	$(RM) *.o *.a *.so
+distclean: clean
+	$(RM) *.so test_easy
 
 .PHONY: all clean lib bin
