Fucking weird bugs are killing me

--- a/hw03/makefile
+++ b/hw03/makefile
@@ -4,8 +4,9 @@ all: lib bin
 
 ##########################
 
-libmemgrind.o: libmemgrind.h utils.h
-utils.o: utils.h
+libmemgrind.o: libmemgrind.h utils.h syslog_parser.h
+utils.o: utils.h syslog_parser.h
+syslog_parser.o: syslog_parser.h
 
 ##########################
 
@@ -14,7 +15,7 @@ lib: LDFLAGS += -Wl,-rpath,. $(origin)
 lib: LDLIBS += -ldl
 lib: libmemgrind.so
 
-libmemgrind.so: libmemgrind.o utils.o
+libmemgrind.so: libmemgrind.o utils.o syslog_parser.o
 	$(CC) $(LDFLAGS) -shared -o $@ $^ $(LDLIBS) $(LOADLIBES)
 
 ##########################
