This exercise took a lot of mental strength from me :(

--- a/ex06/alarm/makefile
+++ b/ex06/alarm/makefile
@@ -1,12 +1,12 @@
-TARGET = abort
+TARGET = alarm troll
 SOURCE = $(TARGET:=.c)
 OBJECT = $(TARGET:=.o)
 CFLAGS = -std=c99 -pedantic -Wall -Wextra
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECT)
-$(OBJECT): $(SOURCE)
+alarm: alarm.o
+troll: troll.o
 
 .PHONY: all clean
 
