--- a/ex06/syscount/Makefile
+++ b/ex06/syscount/Makefile
@@ -1,4 +1,4 @@
-TARGET = abort
+TARGET = syscount
 SOURCE = $(TARGET:=.c)
 OBJECT = $(TARGET:=.o)
 CFLAGS = -std=c99 -pedantic -Wall -Wextra
@@ -7,6 +7,9 @@ all: $(TARGET)
 
 $(TARGET): $(OBJECT)
 $(OBJECT): $(SOURCE)
+
+no_syscall_info: CPPFLAGS += -DCONFIG_USE_PTRACE_SYSCALL_INFO=0
+no_syscall_info: $(TARGET)
 
 .PHONY: all clean
 
