HW09: Made few final adjustments, now my code will be roasted :(

--- a/hw09/makefile
+++ b/hw09/makefile
@@ -8,6 +8,7 @@ override LDFLAGS += -pthread
 
 ifneq ($(strip $(DEBUG)),)
 override CFLAGS += -g -ggdb3 -Og
+override CPPFLAGS += -DDEBUG
 endif
 
 ifneq ($(strip $(OPTIMIZE)),)
